--- a/W02D1/W02D1_SQL.ipynb
+++ b/W02D1/W02D1_SQL.ipynb
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -387,6 +387,7 @@
    "source": [
     "import psycopg2\n",
     "import config as cfg\n",
+    "import pandas as pd\n",
     "\n",
     "postgres_pwd = cfg.postgres['password'] # This is the password you entered when you set up PGSQL\n",
     "\n",
@@ -458,31 +459,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
    "source": [
-    "# make necessary imports and set up environmental variables\n",
-    "#import psycopg2\n",
-    "import pandas as pd\n",
-    "\n",
-    "#postgres_pwd = cfg.postgres['password']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# connect to the database\n",
-    "#con = psycopg2.connect(database='drinks', user='postgres', password=postgres_pwd,\n",
-    " #                      host='127.0.0.1', port='5432')\n",
-    "\n",
     "query = con.cursor()"
    ]
   },
@@ -501,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -537,8 +521,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -550,7 +538,7 @@
        " ('person 1', '2016-10-22', 'bar 19', 'drink 42', 2)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -674,7 +662,7 @@
        "4  person 1  2016-10-22  bar 19  drink 42    2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +758,7 @@
        "4  person 1  2016-10-22  bar 19  drink 42         2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,6 +1025,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Team Work\n",
+    "\n",
+    "### Remember collaboration is key."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1058,7 +1055,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Get the bar name and average price of drinks at each bar.\n",
     "<table style=\"border: 5px; width: 100%\">\n",
@@ -1097,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1107,7 @@
        "'\\nquery= \"\"\"\\n\"\"\"\\n\\nexecute_query(query)\\n'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -1194,7 +1195,7 @@
        "'\\nquery= \"\"\"\\n\"\"\"\\n\\nexecute_query(query)\\n'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1266,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1279,7 +1280,7 @@
        "'\\nquery= \"\"\"\\n\"\"\"\\n\\nexecute_query(query)\\n'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1355,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1365,7 @@
        "'\\nquery= \"\"\"\\n\"\"\"\\n\\nexecute_query(query)\\n'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
