update recommender engines'

--- a/W10D2/W10D2_RecommendationEngines2.ipynb
+++ b/W10D2/W10D2_RecommendationEngines2.ipynb
@@ -27,7 +27,7 @@
     "### W10D2 Recommendation Engines II\n",
     "\n",
     "Instructor: Socorro Dominguez  \n",
-    "March 09, 2021"
+    "May 04, 2021"
    ]
   },
   {
@@ -168,8 +168,8 @@
     }
    },
    "source": [
-    "- There are different approaches to do so: \n",
-    "    - Content-based recommendations - which you learned yesterday!\n",
+    "- There are different approaches to do so (which you learned yesterday): \n",
+    "    - Content-based recommendations\n",
     "    - Collaborative filtering"
    ]
   },
@@ -192,142 +192,13 @@
     }
    },
    "source": [
+    "- Use knowledge of each item to recommend a similar one (item-based recommendation)\n",
+    "\n",
     "- Based on the features of the items and users. For example\n",
-    "    - movies: drama, comedy, horror, Brad Pitt, Steven Spielberg\n",
+    "    - movies: drama, comedy, horror, actors, director\n",
     "    - books: math, languages, author, year, etc...\n",
     "    - destinations: temperature, coast, mountains, price, distance, etc...\n",
     "    - users: age, location, etc..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    " ### One possible approach \n",
-    " - Let's consider User 3 as an example, let's name her Sophie;\n",
-    " \n",
-    " \n",
-    " - Sophie provided ratings for three movies: \"Jurassic Park\", \"Rocky Balboa IV\", and \"Inglorious Basterds\"\n",
-    " \n",
-    " \n",
-    " - Now we can use these ratings to obtain the profile of Sophie;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    " - For example, the profile of Sophie, is given by:\n",
-    "\n",
-    "\\begin{align}\n",
-    "\\text{Profile}(\\text{\"Sophie\"}) = & \\frac{1}{3}[(y_{32}-\\bar{y}_{3.})\\text{Profile}(\\text{\"Jurassic Park\"})\\\\\n",
-    "&\\quad + (y_{33}-\\bar{y}_{3.})\\text{Profile}(\\text{\"Rocky Balboa IV\"})\\\\\n",
-    "&\\quad + (y_{35}-\\bar{y}_{3.})\\text{Profile}(\\text{\"Inglorious Basterds\"})]\n",
-    "\\end{align}\n",
-    "\n",
-    "- The $\\bar{y}_{3.}$ accounts for the Sophie bias when rating\n",
-    "    - Some users consider everything $3\\sim4$, while other consider everything $2\\sim3$;\n",
-    "    - So, these ratings mean different degrees of satisfaction for different users;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    " - Now, all we have to do is to compare users profile with movies profiles;\n",
-    "     - and recommend the movies that are most similar to the user profile;\n",
-    " \n",
-    " \n",
-    " - In case of Sophie, we can get the similarities between\n",
-    "     - $\\text{Profile}(\\text{\"Sophie\"})$ and $\\text{Profile}(\\text{\"Notting Hill\"})$\n",
-    "     - $\\text{Profile}(\\text{\"Sophie\"})$ and $\\text{Profile}(\\text{\"Bird Box\"})$\n",
-    " \n",
-    " \n",
-    " - and recommend the most similar movie;\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "- What else can we do?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    " - Instead of obtaining the profile of the users by averaging the profile of the movies, we can try to use more complex models to learn the users' profiles;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "\n",
-    " - Let's associate a vector $\\beta$ for each user;\n",
-    "     - E.g., User $i$ has profile $\\beta^{(i)}$;\n",
-    " \n",
-    " \n",
-    " - You can roughly think of $\\beta_c^{(i)}$ as how much the $c$th feature of the movies impacts the user $i$;\n",
-    " \n",
-    " \n",
-    " - For example, if the $c$-th feature of the movie is the presence or absence of Brad Pitt, a large $\\beta_c^{(i)}$ means that the user probably likes Brad Pitt."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "- Now all we have to do is to learn $\\beta^{(i)}, i=1,...,m$\n",
-    "    - In other words, want to learn the profile of each user;\n",
-    "    - But how? \n",
-    "\n",
-    "\n",
-    "- Well, we can use different models for that:\n",
-    "    - Maybe linear regression?\n",
-    "    - Maybe neural networks?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "- How to minimize? Take your pick!\n",
-    "    - Maybe Gradient Descent?\n",
-    "    - Or any other minimization algorithm that you might want to use!"
    ]
   },
   {
@@ -365,10 +236,10 @@
     "\n",
     "- Feature acquisition:\n",
     "    - What features should you use to explain the different ratings?\n",
-    "    - Obtaining those features for each item might be very expensive; \n",
+    "    - Obtaining those features for each item might be very expensive. \n",
     "    \n",
     "    \n",
-    "- Low diversity: hardly recommend an item outside the user's profile;\n",
+    "- Low diversity: hardly recommend an item outside the user's profile.\n",
     "    - What if a user has an eclectic taste?\n",
     "\n",
     "\n",
@@ -384,7 +255,7 @@
     }
    },
    "source": [
-    "## Collaborative filtering\n",
+    "## Collaborative filtering (Review)\n",
     "- User-user\n",
     "- Item-item\n",
     "- Latent-factors"
@@ -398,14 +269,12 @@
     }
    },
    "source": [
-    "- In collaborative filtering, the recommendations are not based on profiles of users and movies;\n",
+    "- Use knowledge of a user’s past purchases/selections to recommend what similar users did (user-based recommendation).\n",
     "\n",
+    "- The recommendations will be based on the utility matrix.\n",
     "\n",
-    "- Instead, the recommendations will be based purely on the utility matrix;\n",
-    "\n",
-    "\n",
-    "- The idea is to find similar items or similar users to make your recommendations, hence collaborative;\n",
-    "    - Symmetry: movies are features to users and users are features to movies;"
+    "- The idea is to find similar items or similar users to make your recommendations, hence collaborative.\n",
+    "    - Symmetry: movies are features to users and users are features to movies."
    ]
   },
   {
@@ -435,13 +304,13 @@
    "source": [
     "### Item-to-item\n",
     "\n",
-    "- Suppose you want to predict the rating that Sophie would give to Bird Box;\n",
+    "- Suppose you want to predict the rating that a user (Sophie) would give to a movie (Bird Box)\n",
     "\n",
     "\n",
     "- Here is one approach:\n",
-    "    1. Calculate the similarity between Bird Box and each one of the movies;\n",
-    "    2. Next, select the $k$ movies that are  most similar to Bird Box and that were also rated by Sophie;\n",
-    "    3. Aggregate these ratings (average? average weighted by the similarity?);"
+    "    1. Calculate the similarity between Bird Box and each one of the movies.\n",
+    "    2. Next, select the $k$ movies that are  most similar to Bird Box and that were also rated by Sophie.\n",
+    "    3. Aggregate these ratings."
    ]
   },
   {
@@ -454,183 +323,12 @@
    "source": [
     "### User-to-user\n",
     "\n",
-    "- Suppose you want to predict the rating that Sophie would give to Bird Box;\n",
+    "- Suppose you want to predict the rating that Sophie would give to Bird Box.\n",
     "\n",
     "- You could also base your filtering on the users:\n",
-    "    1. Calculate the similarity of Sophie with each one of the users;\n",
-    "    3. Next, select the $k$ users that are most similar to Sophie and also rated Bird Box;\n",
-    "    2. Aggregate their ratings;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "- Which one do you think will perform better. Why?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Latent factors\n",
-    "- Dimensionality reduction comes into play"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "- In collaborative filtering, we are assuming that we don't have the profiles of the users and items.\n",
-    "\n",
-    "\n",
-    "- In the item-to-item and user-to-user we just directly used the ratings to fill in the missing values;\n",
-    "\n",
-    "\n",
-    "- This time we are going to use the utility matrix to find latent factors that explain the ratings;\n",
-    "    - in other words, we are trying to learn the features!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "- We've seen that if we had the user profile, we can learn the movie profile $\\hat{X}$ \n",
-    "\n",
-    "- Or if we had the movie profile, we could learn the user profile $\\hat{\\beta}$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "- But what if we don't have the movies' nor the users' profiles?\n",
-    "    - Well, let's try to learn them, right?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "- We have a similar problem, but instead of minimizing on either $X$ or $\\beta$, we need to minimize on both!!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "$$\n",
-    "L(y_{ij}, \\hat{y}_{ij}) = \\sum_{i,j}u_{ij}\\left(y_{ij} -  X^{(j)}\\left(\\beta^{(i)}\\right)\\right)^2 + \\lambda||\\beta||^2+ \\lambda||X||^2\n",
-    "$$\n",
-    "where $u_{ij}=1$ if User $i$ has provided a rating for movie $j$, and 0 otherwise;\n",
-    "\n",
-    "- Again, you can use different minimization algorithms here, (e.g., SGD).\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "- Let $Y$ be our utility matrix, then we can write $Y$ like\n",
-    "$$\n",
-    "Y^T \\approx \\hat{X}_{(n\\times k)}\\hat{\\beta}_{(k\\times m)}\n",
-    "$$\n",
-    "for some $k<m$;\n",
-    "\n",
-    "\n",
-    "\n",
-    "- So what is going on here?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "- We are learning $k$ new features that will help explain the variation of ratings;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### But what are those features?\n",
-    "\n",
-    "- You can think they are new features, just like the intuitive ones!\n",
-    "    - It just happens that we don't know an intuitive interpretation for them!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### OK we factorized $Y$, so what?\n",
-    "\n",
-    "- Now you have your movie features $\\hat{X}$ and your users features $\\hat{\\beta}$;\n",
-    "\n",
-    "\n",
-    "- Well, again, there's no recipe. You can use different approaches;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "- One possible approach is to just estimate the missing entries in a row, and recommend the ones with highest ratings to the user;\n",
-    "\n",
-    "\n",
-    "- Another approach is to use the learned movie features to find movies that are similar to a specific movie:\n",
-    "    - \"because you watched Jurassic Park: \"\n",
-    "\n",
-    "\n",
-    "- Or we can apply ML techniques: K-Means, KNN, the choice is yours"
+    "    1. Calculate the similarity of Sophie with each one of the users.\n",
+    "    3. Next, select the $k$ users that are most similar to Sophie and also rated Bird Box.\n",
+    "    2. Aggregate their ratings."
    ]
   },
   {
@@ -830,6 +528,171 @@
     "\n",
     "- trust more implicit data that costs something, like time or even money;\n",
     "    - this makes it harder to fraud;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## SVD\n",
+    "\n",
+    "The Singular Value Decomposition (SVD) decreases the dimension of the utility matrix A by extracting its latent factors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "### Latent factors\n",
+    "- Latent factors are the characteristics of the items, for example, the genre of the music, the genre of the movie... "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "- We are going to use the utility matrix to find latent factors that explain the ratings.\n",
+    "    - in other words, we are trying to learn the features!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "- We've seen that if we had the user profile, we can learn the movie profile $\\hat{X}$ \n",
+    "\n",
+    "- Or if we had the movie profile, we could learn the user profile $\\hat{\\beta}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- But what if we don't have the movies' nor the users' profiles?\n",
+    "    - Well, let's try to learn them, right?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "- We have a similar problem, but instead of minimizing on either $X$ or $\\beta$, we need to minimize on both!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "$$\n",
+    "L(y_{ij}, \\hat{y}_{ij}) = \\sum_{i,j}u_{ij}\\left(y_{ij} -  X^{(j)}\\left(\\beta^{(i)}\\right)\\right)^2 + \\lambda||\\beta||^2+ \\lambda||X||^2\n",
+    "$$\n",
+    "where $u_{ij}=1$ if User $i$ has provided a rating for movie $j$, and 0 otherwise;\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "- Let $Y$ be our utility matrix, then we can write $Y$ like\n",
+    "$$\n",
+    "Y^T \\approx \\hat{X}_{(n\\times k)}\\hat{\\beta}_{(k\\times m)}\n",
+    "$$\n",
+    "for some $k<m$;\n",
+    "\n",
+    "\n",
+    "\n",
+    "- So what is going on here?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- We are learning $k$ new features that will help explain the variation of ratings;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### But what are those features / latent factors?\n",
+    "\n",
+    "- You can think they are new features, just like the intuitive ones!\n",
+    "    - It just happens that we don't know an intuitive interpretation for them!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### OK we factorized $Y$, so what?\n",
+    "\n",
+    "- Now you have your movie features $\\hat{X}$ and your users features $\\hat{\\beta}$;\n",
+    "\n",
+    "\n",
+    "- Well, again, there's no recipe. You can use different approaches;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "- One possible approach is to just estimate the missing entries in a row, and recommend the ones with highest ratings to the user;\n",
+    "\n",
+    "\n",
+    "- Another approach is to use the learned movie features to find movies that are similar to a specific movie:\n",
+    "    - \"because you watched Jurassic Park: \"\n",
+    "\n",
+    "\n",
+    "- Or we can apply ML techniques: K-Means, KNN, the choice is yours"
    ]
   },
   {
@@ -1099,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1123,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1170,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1191,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1208,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1233,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1246,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1259,7 +1122,7 @@
        "array([2353,  546,  615, 1756,  622])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1285,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1312,8 +1175,8 @@
       "\tToy Story 2 (1999)                                 Total stars: 374.5\n",
       "\tIndependence Day (a.k.a. ID4) (1996)               Total stars: 696.0\n",
       "\tMission: Impossible (1996)                         Total stars: 573.0\n",
-      "\tTwister (1996)                                     Total stars: 408.5\n",
-      "\tWilly Wonka & the Chocolate Factory (1971)         Total stars: 461.0\n",
+      "\tBabe (1995)                                        Total stars: 467.5\n",
+      "\tBug's Life, A (1998)                               Total stars: 323.5\n",
       "\n",
       "\n",
       "\n",
