update recommender engines'

--- a/W10D2/W10D2_RecommendationEngines2.ipynb
+++ b/W10D2/W10D2_RecommendationEngines2.ipynb
@@ -1104,7 +1104,7 @@
    },
    "outputs": [],
    "source": [
-    "movie_X, user_mapper, movie_mapper, user_inverse_mapper, movie_inverse_mapper, user_ind, movie_ind = create_X(movie_ratings, movie_n, movie_d, user_key=\"userId\", item_key=\"movieId\")"
+    "movie_X, user_mapper, movie_mapper, user_inverse_mapper, movie_inverse_mapper, user_ind, movie_ind = create_X(movie_ratings, movie_n, movie_d, user_key=\"userId\", item_key=\"movieId\")\n"
    ]
   },
   {
@@ -1167,16 +1167,16 @@
       "\tBack to the Future (1985)                          Total stars: 690.5\n",
       "\tJurassic Park (1993)                               Total stars: 892.5\n",
       "\tAladdin (1992)                                     Total stars: 694.0\n",
-      "\tMission: Impossible (1996)                         Total stars: 573.0\n",
+      "\tGroundhog Day (1993)                               Total stars: 564.0\n",
       "\n",
       "\n",
       "\n",
       "SVD(k=100): \n",
-      "\tToy Story 2 (1999)                                 Total stars: 374.5\n",
-      "\tIndependence Day (a.k.a. ID4) (1996)               Total stars: 696.0\n",
       "\tMission: Impossible (1996)                         Total stars: 573.0\n",
-      "\tBabe (1995)                                        Total stars: 467.5\n",
-      "\tBug's Life, A (1998)                               Total stars: 323.5\n",
+      "\tIndependence Day (a.k.a. ID4) (1996)               Total stars: 696.0\n",
+      "\tToy Story 2 (1999)                                 Total stars: 374.5\n",
+      "\tWilly Wonka & the Chocolate Factory (1971)         Total stars: 461.0\n",
+      "\tTwister (1996)                                     Total stars: 408.5\n",
       "\n",
       "\n",
       "\n",
@@ -1202,7 +1202,7 @@
     "    print(\"\\n\\n\")\n",
     "    movie_svd = TruncatedSVD(n_components=k)\n",
     "    Z = movie_svd.fit_transform(movie_X)\n",
-    "    nn_svd = find_nearestneighbour(NearestNeighbors(n_neighbors=6), Z, 0)\n",
+    "    nn_svd = find_nearestneighbour(NearestNeighbors(n_neighbors=50), Z, 0)\n",
     "\n",
     "    print(f\"SVD(k={k}): \")\n",
     "    print_movie_pop(nn_svd) \n",
