--- a/W10D2/W10D2_RecommendationEngines2.ipynb
+++ b/W10D2/W10D2_RecommendationEngines2.ipynb
@@ -486,12 +486,11 @@
    "source": [
     "#### Or you might want not recommend somethings\n",
     "\n",
-    "- [Walmart links Martin Luther King Jr. to “Planet of the Apes”](http://www.nbcnews.com/id/10730202/ns/technology_and_science-tech_and_gadgets/t/wal-mart-blames-human-error-offensive-link/#.XEamRc2IaUk)\n",
-    "\n",
-    "\n",
     "- [Is Target the new pregnancy test?](https://www.forbes.com/sites/kashmirhill/2012/02/16/how-target-figured-out-a-teen-girl-was-pregnant-before-her-father-did/#4d7f597f6668)\n",
     "<br><br>\n",
-    "- Be careful with sensitive matters;"
+    "- [Walmart links Martin Luther King Jr. to “Planet of the Apes”](http://www.nbcnews.com/id/10730202/ns/technology_and_science-tech_and_gadgets/t/wal-mart-blames-human-error-offensive-link/#.XEamRc2IaUk)\n",
+    "<br><br>\n",
+    "- BE CAREFUL WITH SENSITIVE MATTERS!"
    ]
   },
   {
@@ -631,8 +630,7 @@
     "$$\n",
     "for some $k<m$;\n",
     "\n",
-    "\n",
-    "\n",
+    "<br>\n",
     "- So what is going on here?"
    ]
   },
@@ -955,6 +953,7 @@
     }
    ],
    "source": [
+    "import pandas as pd \n",
     "# to look up titles\n",
     "movie_info = pd.read_csv('data/movies.csv', index_col=0)\n",
     "movie_info.head()"
