--- a/W04D3/W04D3_intro_to_ml_and_lr.ipynb
+++ b/W04D3/W04D3_intro_to_ml_and_lr.ipynb
@@ -54,7 +54,7 @@
    "execution_count": 1,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "outputs": [],
@@ -557,7 +557,7 @@
    },
    "source": [
     "## Splitting out our X and y\n",
-    "- In this case, are we working with a regression problem. Could you say why?\n",
+    "- In this case, we are working with a regression problem. Could you say why?\n",
     "- Can you help me identify what the features are? \n",
     "- On the same line, what would the output or target variable be?"
    ]
@@ -940,7 +940,6 @@
     "## Minimizing approximation error ...\n",
     "... means that our model generalizes well\n",
     "\n",
-    "$E_{test} = E_{approx} + E_{train}$\n",
     "\n",
     "$E_{approx} = (E_{test} - E_{train})$\n",
     "\n",
@@ -1976,7 +1975,7 @@
     "\n",
     "We can use these coefficients to interpret our model. They show us how much each of these features affects our model’s prediction.\n",
     "\n",
-    "For example, if we had a house with 2 RM (number of rooms per dwelling), our RM value is 2. That means that $2*3.854$ will be contributed to our predicted price. \n",
+    "For example, if we had a house with 2 RM (number of rooms per dwelling), our RM value is 2. That means that $2*3.495$ will be contributed to our predicted price. \n",
     "\n",
     "The negative coefficients work in the opposite way, if we have a house where DIS (weighted distances to five Boston employment centres) is 10, that would contribute $10*-1.3726$ to our house price."
    ]
@@ -2330,8 +2329,8 @@
     "$R^2 = 1 - \\frac{RSS}{TSS}$\n",
     "\n",
     "$R^2\t=\t$   coefficient of determination    \n",
-    "$RSS\t=\t$  sum of squares of residuals   \n",
-    "$TSS\t=\t$   total sum of squares   $=\\sum_{i=1}^{n}(y_{i}-\\bar{y})^{2}$"
+    "$RSS\t=\t$  sum of squares of residuals   $=\\sum_{i=1}^{n}(y_{i}-{f(x_i)})^{2}$; $f(x_i)$ is the prediction   \n",
+    "$TSS\t=\t$   total sum of squares   $=\\sum_{i=1}^{n}(y_{i}-\\bar{y})^{2}$; ; $\\bar{y}$ is the mean value"
    ]
   },
   {
@@ -2342,7 +2341,24 @@
     }
    },
    "source": [
-    "The sum of squares measures how much variation there is in the modelled values and this is compared to the total sum of squares (TSS), which measures how much variation there is in the observed data, and to the residual sum of squares, which measures the variation in the error between the observed data and modelled values."
+    "**What does that mean?**\n",
+    "\n",
+    "* $R^2$ is a measure of fit.  \n",
+    "  \n",
+    "* It indicates how much variation of a dependent variable is explained by the independent variables.\n",
+    "  \n",
+    "* An R-squared of 100% means that $y$ is completely explained by the independent variables.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "$R^2 = 1 - \\frac{Unexplained Variation}{TotalVariation}$"
    ]
   },
   {
@@ -2481,7 +2497,8 @@
     }
    },
    "source": [
-    "## Polynomial regression\n",
+    "## Polynomial regression \n",
+    "(Time allowing)\n",
     "\n",
     "### Non-linear regression motivation\n",
     "- Linear regression might seem rather limited. \n",
